Adicionando estilos nav-bar e banner

--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Allerta&display=swap");
+@import url("https://fonts.googleapis.com/css?family=BenchNine:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Amita:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
 
-*{
-  font-family: "Allerta", sans-serif;
-  
-
-}
 @font-face {
   font-family: "Allerta";
   src: url("https://fonts.googleapis.com/css?family=Allerta&display=swap");
@@ -16,42 +14,142 @@
   font-display: sans-serif;
 }
 
+body {
+  margin: 0;
+}
 
-@import url("https://fonts.googleapis.com/css?family=BenchNine:300&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Amita:700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap");
+/*Nav-bar*/
+.navbar {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+  background-color: white;
+}
 
-/* Colors */
-.color-blue {
-  color: #7cd9dc;
+.navbar ul {
+  list-style-type: none;
+  padding: 0;
 }
-.color-pink-strong{
-  color: #FD89B2;
-}
-.color-pink-light{
-  color: #FEE6EF;
-}
-.color-yellow{
-  color: #FDEF51;
-}
-.color-grey{
-  color: #918C8C;
+
+.navbar-items {
+  display: flex;
 }
 
 .navbar-items a {
   color: #7cd9dc;
-  font-family: 'Allerta';
+  font-family: "Allerta";
+  margin: 1rem;
+  display: block;
 }
 
 .navbar-items a:hover {
+  color: #fdef51;
+}
+
+/*Main*/
+
+.main {
+  padding-top: 3rem;
+}
+
+/*Banner*/
+
+.banner-title {
+  position: relative;
+  z-index: 2;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.banner-title .title {
+  font-family: "Amita";
+  color: white;
+  text-align: center;
+  font-size: 3rem;
+  margin: 0rem;
+}
+.banner-title .subtitle {
+  font-family: "BenchNine";
+  color: white;
+  text-align: end;
+  font-size: 2rem;
+  margin: 0rem;
+}
+
+.banner .profile-view {
+  position: relative;
+  z-index: 1;
+  height: 50%;
+  width: 50%;
+  padding: 1rem;
+  margin-top: -7rem;
+  display: flex;
+  align-items: center;
+}
+.col-md-6 {
+  width: 50%;
+  padding: 2rem;
+}
+#chevron {
+  text-align: center;
+  padding: 12px;
+  margin-bottom: 6px;
+  height: 60vh;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+}
+#chevron:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 60vh;
+  width: 60%;
+  background: #7cd9dc;
+  transform: skew(0deg, 6deg);
+  border: 0.1rem solid #fdef51;
+  border-radius: 0 50% 0 10%;
+}
+#chevron:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 60vh;
+
+  width: 40%;
+  background: url("../assets/banner/woman_in_tech.png");
+  transform: skew(0deg, -6deg);
+}
+.profile {
+  position: relative;
+  z-index: 1;
+  height: 50%;
+  width: 50%;
+  padding: 0 3rem;
+  margin-top: -7rem;
+  display: flex;
+  align-items: center;
+}
+/* Colors */
+.color-blue {
+  color: #7cd9dc;
+}
+.color-pink-strong {
+  color: #fd89b2;
+}
+.color-pink-light {
   color: #fee6ef;
 }
-
-/* Banner */
-.banner .main-title{
-
-  color: #fd89b2;
-  
-
+.color-yellow {
+  color: #fdef51;
 }
-
+.color-grey {
+  color: #918c8c;
+}
